[tool.poetry]
name = "solarsystem"
version = "0.1.0"
description = ""
authors = ["bogdankozlovsky <bogdan.k@datarails.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pygame = "2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
